--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -8,19 +8,19 @@
                       <p class="card-category">Complete profile</p>
                   </div>
                   <div class="card-body">
-                      <form >
+                      <form [formGroup]="userData" (ngSubmit)="onSubmit(userID.value, userName.value)">
                           <div class="row">
-                              <div class="col-md-12 custom12">
+                              <!-- <div class="col-md-12 custom12">
                                 <h4>Choose User Image:</h4>
                                 <div class="userImgUploader">
-                                  <img class="uploadimgview card-avatar" src={{url}} alt="your image" />
-                                  <input type="file" class="uploadimgSelect" name="images" accept="image/jpeg, image/png, image/jpg" (change)="onSelectFile($event)" required >                                  
+                                  <img class="uploadimgview card-avatar"  src={{url}} alt="your image" />
+                                  <input type="file" class="uploadimgSelect" formControlName="userImg" accept="image/jpeg, image/png, image/jpg" (change)="onSelectFile($event)" required >                                  
                                 </div>                                
-                              </div>
+                              </div> -->
                               <div class="col-md-12">
                                 <mat-form-field >
                                   <mat-label>Enter new user ID</mat-label>
-                                  <input matInput  [formControl]="validate"  required>
+                                  <input matInput  [formControl]="validate" formControlName="userID" required #userID>
                                   <mat-error *ngIf="validate.invalid">{{getErrorMessage()}}</mat-error>
                                 </mat-form-field>                       
                               </div>                            
@@ -29,13 +29,13 @@
                               <div class="col-md-12">
                                 <mat-form-field>
                                   <mat-label>Enter new user name</mat-label>
-                                  <input matInput  [formControl]="validate"  required>
-                                  <mat-error *ngIf="validate.invalid">{{getErrorMessage()}}</mat-error>
+                                  <input matInput  [formControl]="validate1" formControlName="userName" required #userName>
+                                  <mat-error *ngIf="validate1.invalid">{{getErrorMessage1()}}</mat-error>
                                 </mat-form-field>
                               </div>
                              
                           </div>
-                          <button mat-raised-button type="submit" class="btn btn-primary pull-right">Create Profile</button>
+                          <button mat-raised-button type="submit" class="btn btn-primary pull-right" >Create Profile</button>
                           <div class="clearfix"></div>
                       </form>
                   </div>
