relsease un identified edit

--- a/src/app/typography/typography.component.html
+++ b/src/app/typography/typography.component.html
@@ -1,1 +1,1 @@
-<app-user-profile [current_url]="url"></app-user-profile>
+<app-user-profile [current_url]="url" [current_id]="id" ></app-user-profile>
