--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -12,7 +12,7 @@
                           <table class="table">
                               <thead class=" text-primary">
                                   <th>
-                                      ID
+                                      Sl. No.
                                   </th>
                                   <th>
                                       Name
@@ -27,10 +27,17 @@
                                       Salary
                                   </th>
                               </thead>
-                              <tbody>
-                                  
+                              <tbody *ngFor="let record of data, let i=index">
+                                  <td> {{i}} </td>
+                                  <td><img [src]=getSantizeUrl(record.imgUrl) alt="img" class="guest_img"></td>
+                                  <td> {{record.date}} </td>
+                                  <td> {{record.session}} </td>
+                                  <td><button mat-raised-button  class="btn btn-danger pull-right">Delete</button> </td>
+                                  <td><button mat-raised-button [routerLink]="['/unidentified', record.id]" class="btn btn-primary pull-right">Update</button> </td>
                               </tbody>
                           </table>
+                          <mat-spinner mode="indeterminate" *ngIf="loading" diameter="45"></mat-spinner>
+                          {{status}}
                       </div>
                   </div>
               </div>
