--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -13,8 +13,10 @@
                               <div class="col-md-12 custom12">
                                 <h4>Choose User Image:</h4>
                                 <div class="userImgUploader">
-                                  <img class="uploadimgview card-avatar"  src={{url}} alt="your image" />
-                                  <input type="file" class="uploadimgSelect" id="profileImg" accept="image/jpeg, image/png, image/jpg" (change)="onSelectFile($event)" required  >                                  
+                                  <img class="uploadimgview card-avatar"  src={{url}} alt="your image" *ngIf="main" />
+                                  <img class="uploadimgview card-avatar"  [src]=getSantizeUrl(update_unidentified_data.imgUrl) alt="your image" *ngIf="update_unidentified" />
+                                  <input type="file" class="uploadimgSelect" id="profileImg" accept="image/jpeg, image/png, image/jpg" (change)="onSelectFile($event)" required  [disabled]=diasble>   
+                                  <mat-spinner mode="indeterminate" *ngIf="loading" diameter="85"></mat-spinner>                               
                                 </div>                                
                               </div>
                               <div class="col-md-12">
@@ -35,7 +37,20 @@
                               </div>
                              
                           </div>
-                          <button mat-raised-button type="submit" class="btn btn-primary pull-right" >Create Profile</button>
+                          <div class="row">
+                            <div class="col-md-12">
+                              <div class="row">
+                                <div class="col-md-8"></div>
+                                <div class="col-md-1">
+                                  <mat-spinner mode="indeterminate" *ngIf="posting" diameter="40"></mat-spinner>
+                                </div>
+                                <div class="col-md-3">
+                                  <button mat-raised-button type="submit" class="btn btn-primary" >Create Profile</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          
                           <div class="clearfix"></div>
                       </form>
                   </div>
