--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -32,7 +32,7 @@
                                   <td><img [src]=getSantizeUrl(record.imgUrl) alt="img" class="guest_img"></td>
                                   <td> {{record.date}} </td>
                                   <td> {{record.session}} </td>
-                                  <td><button mat-raised-button  class="btn btn-danger pull-right">Delete</button> </td>
+                                  <td><button mat-raised-button (click)="delete(record.id)" class="btn btn-danger pull-right">Delete</button> </td>
                                   <td><button mat-raised-button [routerLink]="['/unidentified', record.id]" class="btn btn-primary pull-right">Update</button> </td>
                               </tbody>
                           </table>
